--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,1 +1,24 @@
+name: Push-Wordpress-website-to EC2 server through github actions 
 
+# Trigger deployment only on push to main branch
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    name: Deploy to EC2 on master branch push
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout the files
+        uses: actions/checkout@v2
+
+      - name: Deploy to Server 1
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          REMOTE_HOST: 52.5.75.28
+          REMOTE_USER: ubuntu
+          TARGET: /var/www/html/wordpress
