--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -20,5 +20,5 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_HOST: 52.5.75.28
-          REMOTE_USER: root
+          REMOTE_USER: ubuntu
           TARGET: /var/www/html/wordpress
